N°2847 - Fieldset: Fix alignement/positionning  with siblings, parent (also some renaming and variables extraction)

--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -3,20 +3,21 @@
  * license     http://opensource.org/licenses/AGPL-3.0
  */
 
-$ibo-field-value--color: $ibo-color-grey-700 !default;
+$ibo-field--sibling-spacing: 16px !default;
+$ibo-field--value--color: $ibo-color-grey-700 !default;
 
 .ibo-field {
   @extend %ibo-font-ral-nor-150;
 
   & ~ .ibo-field {
-    margin-top: 10px;
+    margin-top: $ibo-field--sibling-spacing;
   }
 }
 
 .ibo-field-large {
   display: inherit;
 
-  .ibo-field-label {
+  .ibo-field--label {
     display: inherit;
   }
 }
@@ -25,21 +26,21 @@ $ibo-field-value--color: $ibo-color-grey-700 !default;
   display: table;
   width: 100%;
 
-  .ibo-field-label {
+  .ibo-field--label {
     display: table-cell;
     vertical-align: top;
   }
 }
 
-.ibo-field-label {
+.ibo-field--label {
   min-width: 100px;
   max-width: 145px;
   width: 30%;
   padding-right: 10px;
 }
 
-.ibo-field-value {
+.ibo-field--value {
   display: table;
   width: 100%;
-  color: $ibo-field-value--color;
+  color: $ibo-field--value--color;
 }
